# poetry-django-skel

./: .flake8  .gitignore  Makefile  README.rst  pyproject.toml
.confidential/: defaults.json
.github/workflows/: ci.yml
bash/: check_users.sh
devsecweb/: apps.py  tests.py  urls.py  views.py
tests/: test_something.py
webproject/: asgi.py  settings.py  urls.py  wsgi.py
